--- a/style.css
+++ b/style.css
@@ -182,7 +182,13 @@ footer{
 }
 .footer-list-1{
     list-style-type:none;
-    width: 33.3%;
+    width: 27%;
+    line-height: 1.8;
+    text-align: center;
+}
+.footer-list-2{
+    list-style-type:none;
+    width: 46%;
     line-height: 1.8;
     text-align: center;
 }
