--- a/style.css
+++ b/style.css
@@ -182,17 +182,20 @@ footer{
 }
 .footer-list-1{
     list-style-type:none;
-    width: 27%;
+    width: 25%;
     line-height: 1.8;
-    text-align: center;
 }
 .footer-list-2{
     list-style-type:none;
-    width: 46%;
+    width: 50%;
     line-height: 1.8;
-    text-align: center;
 }
 .footer-list-1 li a{
+    text-decoration:none;
+    color:#f1f1ef;
+    font-size:1rem;
+}
+.footer-list-2 li a{
     text-decoration:none;
     color:#f1f1ef;
     font-size:1rem;
