--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ footer{
     list-style-type:none;
     width: 50%;
     line-height: 1.8;
-    text-align::center;
+    text-align:center;
 }
 .footer-list-1 li a{
     text-decoration:none;
